# google_translate

./: .gitignore  README.md  gettk.py  google_translate.py  pyproject.toml
tests/: conftest.py  test_gettk.py  test_google_translate.py  test_integration.py
